# tinycloud-node

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTAINER_OPTIMIZATION.md  Cargo.toml  DEPLOY_SST.md  DEV_SETUP.md  Dockerfile  LICENSE.md  PRD.md  README.md  TinyCloud.md  agent.changelog.md  agent.dev.md  capabilities.json  capabilities.schema.json  deploy-secrets.js  docker-compose.dstack-full.yaml  docker-compose.dstack-postgres.yaml  docker-compose.dstack.yaml  docker-compose.yml  dstack-authorized-keys  package.json  release-plz.toml  sst-deployment.md  sst-env.d.ts  sst.config.ts  tinycloud.toml
cacao/: Cargo.toml
cacao/src/: lib.rs  siwe_cacao.rs
client-cli/: Cargo.toml  PRD.md  implementation_plan.md
client-cli/src/: auth.rs  cli.rs  client.rs  commands.rs  error.rs  key.rs  main.rs  utils.rs
siwe-recap/: Cargo.toml
siwe-recap/src/: capability.rs  lib.rs
test/m1-realdata-e2e/: Cargo.toml  EXECUTABLE_PATH_TRACE.md  GRANT_COMPAT_EXECUTABLE_PATH_TRACE.md  LIVE_GATE_EXECUTABLE_PATH_TRACE.md  LIVE_GATE_RUNBOOK.md  README.md  VALIDATION.md  requirements.txt
test/m1-realdata-e2e/scripts/: snapshot-node-db.sh
test/m1-realdata-e2e/src/: lib.rs  live_gate_verifier.rs
test/m1-realdata-e2e/tests/: cross_layer_contract.rs  grant_compat.rs  live_gate_verifier.rs
test/n4-mounted-e2e/: Cargo.toml
test/n4-mounted-e2e/src/: main.rs
test/w5-policy-runtime-node-e2e/: Cargo.toml  README.md
test/w5-policy-runtime-node-e2e/tests/: challenge_to_native_read.rs  tc119_registry_wire_paths.rs
tinycloud-core/: Cargo.toml
tinycloud-core/src/: compute.rs  database_artifacts.rs  db.rs  encryption.rs  hash.rs  keys.rs  lib.rs  manifest.rs  sql_sizes.rs  util.rs  write_hooks.rs
tinycloud-core/src/duckdb/: caveats.rs  database.rs  describe.rs  mod.rs  parser.rs  service.rs  storage.rs  types.rs
tinycloud-core/src/encryption_network/: backend.rs  canonical.rs  mod.rs  network_id.rs  protocol.rs  service.rs  tests.rs  types.rs
tinycloud-core/src/events/: mod.rs
tinycloud-core/src/migrations/: m20230510_101010_init_tables.rs  m20260218_sql_database.rs  m20260409_000000_hook_tables.rs  m20260410_000001_kv_quarantine.rs  m20260410_000002_canonical_commit.rs  m20260512_000000_signed_kv_tickets.rs  m20260516_000000_database_artifacts.rs  m20260601_000000_encryption_networks.rs  m20260602_000000_rename_encryption_owner_did.rs  m20260715_000000_policy_authority.rs  m20260715_000000_revocation_timestamp.rs  m20260719_000000_share_email_protocol.rs  m20260719_000001_share_policy_presentation_jti.rs  m20260719_000002_policy_status_freshness.rs  mod.rs
tinycloud-core/src/models/: abilities.rs  canonical_commit.rs  database_artifact.rs  delegation.rs  did_resolution.rs  encryption_audit.rs  encryption_ceremony.rs  encryption_network.rs  encryption_network_member.rs  encryption_nonce.rs  epoch.rs  hook_delivery.rs  hook_subscription.rs  invocation.rs  kv_delete.rs  kv_quarantine.rs  kv_write.rs  mod.rs  namespace.rs  policy_challenge.rs  policy_delegation.rs  policy_edge.rs  policy_issuance_audit.rs  revocation.rs  share_anonymous_challenge.rs  share_email_audit.rs  share_email_quota.rs  share_holder_read_jti.rs  share_invitation_authorization_jti.rs  share_policy_presentation_jti.rs  share_session_handle.rs  signed_kv_ticket.rs  space.rs
tinycloud-core/src/policy_authority/: contract_accepted.json  database.rs  mod.rs  verifier.rs
tinycloud-core/src/policy_capability/: generated.rs  jcs.rs  mod.rs  sql_caveat.rs
tinycloud-core/src/relationships/: epoch_order.rs  event_order.rs  invoked_abilities.rs
tinycloud-core/src/replication/: commit.rs  keys.rs  messages.rs  mod.rs  recon.rs  snapshots.rs  store.rs  types.rs
tinycloud-core/src/share_email/: authority.rs  bridge.rs  data_plane.rs  fakes.rs  invitation.rs  mod.rs  ports.rs  state.rs  types.rs  verifier.rs
tinycloud-core/src/sql/: authorizer.rs  caveats.rs  database.rs  mod.rs  parser.rs  replication.rs  service.rs  storage.rs  types.rs
tinycloud-core/src/storage/: either.rs  memory.rs  mod.rs  util.rs
tinycloud-core/src/types/: ability.rs  capabilities_read_params.rs  caveats.rs  delegation_query.rs  kv_read_params.rs  mod.rs  namespace_id_wrap.rs  orbit_id_wrap.rs  path.rs  resource.rs  space_id_wrap.rs  sql_read_params.rs
tinycloud-core/tests/: compute_deploy_atomicity.rs  policy_authority_exact_email_n4.rs  routine_key_deriver.rs
tinycloud-lib/: Cargo.toml
tinycloud-lib/src/: authorization.rs  lib.rs  resolver.rs  resource.rs
tinycloud-lib/tests/: header_encode.rs
tinycloud-lib/tests/header/: mod.rs
tinycloud-node-server/: CHANGELOG.md  Cargo.toml
tinycloud-node-server/specs/email-claim-v1/: README.md  authority-material.schema.json  domains.json  schemas.json
tinycloud-node-server/src/: allow_list.rs  auth_guards.rs  authorization.rs  cli.rs  compute.rs  compute_exec.rs  compute_keys.rs  config.rs  dstack.rs  hooks.rs  invocation_replay.rs  lib.rs  main.rs  prometheus.rs  quota.rs  runtime.rs  share_email.rs  signed_urls.rs  tracing.rs  webhook_dispatcher.rs
tinycloud-node-server/src/link/: client.rs  commands.rs  csr.rs  ip.rs  mod.rs  payload.rs  proxy.rs  state.rs
tinycloud-node-server/src/node_control/: control.rs  key_provider.rs  mod.rs  paths.rs  service.rs
tinycloud-node-server/src/routes/: admin.rs  encryption.rs  hooks.rs  mod.rs  public.rs  replication.rs  tc_bench.rs  util.rs
tinycloud-node-server/src/storage/: file_system.rs  s3.rs  (+1 more)
tinycloud-node-server/tests/: compute_abi.rs  compute_deploy.rs  compute_disabled.rs  compute_e2e.rs  compute_execute.rs  compute_routine_key.rs  compute_skeleton.rs  email_claim_frozen_manifest.rs  email_claim_route_parity.rs  link_service.rs  tunnel_service.rs  w1_native_contract.rs
tinycloud-sdk-rs/: Cargo.toml
tinycloud-sdk-rs/src/: authorization.rs  lib.rs  serde_siwe.rs  session.rs  siwe_utils.rs  util.rs
tinycloud-sdk-wasm/: Cargo.toml  build.sh
tinycloud-sdk-wasm/src/: definitions.rs  host.rs  lib.rs  session.rs  vault.rs
tinycloud-verifier-wasm/: Cargo.toml
tinycloud-verifier-wasm/src/: lib.rs
(+164 files in other folders)
