[package]
name = "tinycloud"
version = "0.2.0"
authors = ["TinyCloud Protocol"]
edition = "2021"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
aws-sdk-s3 = "0.19"
aws-types = "0.49"
aws-smithy-http = "0.49"
base64 = "0.13"
futures = { default-features = false, version = "0.3", features = ["alloc", "std"] }
hyper = "0.14" # Prometheus server
lazy_static = "1.4.0"
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] } # Corrected name
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace"] }
pin-project = "1"
prometheus = { version = "0.13.0", features = ["process"] }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "tls", "mtls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
thiserror = "2.0"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[dependencies.tinycloud-core]
path = "tinycloud-core/"
features = ["sqlite", "postgres", "mysql", "tokio"]

[dependencies.tinycloud-lib]
path = "tinycloud-lib/"

[workspace]

members = [
    "tinycloud-lib",
    "tinycloud-sdk-wasm",
    "tinycloud-sdk-rs",
    "tinycloud-core",
    "siwe",
    "siwe-recap",
    "cacao"
]

exclude = [
    "test/load/signer",
]

[workspace.dependencies]
# Common dependencies with unified versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64"] }
thiserror = "2.0"
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting"] }
iri-string = { version = "0.7", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
http = "1.3"
hex = "0.4"
futures = { version = "0.3", features = ["alloc", "std"] }
pin-project = "1"
async-trait = "0.1"
ipld-core = { version = "0.4", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
ucan-capabilities-object = { git = "https://github.com/tinycloudlabs/ucan-capabilities-object" }

# Internal crate dependencies
tinycloud-lib = { path = "tinycloud-lib", version = "0.2.0" }
tinycloud-core = { path = "tinycloud-core", version = "0.1.0" }
tinycloud-sdk-rs = { path = "tinycloud-sdk-rs", version = "0.2.0" }
siwe = { path = "siwe", version = "1.0.0" }
siwe-recap = { path = "siwe-recap", version = "0.2.0" }
cacaos = { path = "cacao", version = "0.5.1" }

# Security patches for transitive dependencies
[patch.crates-io]
# Fix RUSTSEC-2025-0047: Out-of-bounds access in get_disjoint_mut (0.4.10 -> 0.4.11)
slab = { git = "https://github.com/tokio-rs/slab", tag = "v0.4.11" }
