[workspace]

members = [
    "tinycloud-auth",
    "tinycloud-node-server",
    "tinycloud-sdk-wasm",
    "tinycloud-sdk-rs",
    "tinycloud-core",
    "dependencies/siwe",
    "dependencies/siwe-recap",
    "dependencies/cacao"
]

default-members = ["tinycloud-node-server"]

exclude = [
    "test/load/signer",
]

[workspace.dependencies]
# Common dependencies with unified versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64"] }
thiserror = "2.0"
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting"] }
iri-string = { version = "0.7", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
http = "1.3"
hex = "0.4"
futures = { version = "0.3", features = ["alloc", "std"] }
pin-project = "1"
async-trait = "0.1"
ipld-core = { version = "0.4", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
ucan-capabilities-object = { git = "https://github.com/tinycloudlabs/ucan-capabilities-object" }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype", "hooks", "backup"] }
sqlparser = { version = "0.44", features = ["serde"] }
tracing = "0.1"

# Internal crate dependencies
tinycloud-auth = { path = "tinycloud-auth", version = "1.0.0" }
tinycloud-core = { path = "tinycloud-core", version = "1.0.0" }
tinycloud-sdk-rs = { path = "tinycloud-sdk-rs", version = "1.0.0" }
siwe = { path = "dependencies/siwe", version = "1.0.0" }
siwe-recap = { path = "dependencies/siwe-recap", version = "1.0.0" }
cacaos = { path = "dependencies/cacao", version = "1.0.0" }

# Security patches for transitive dependencies
[patch.crates-io]
# Fix RUSTSEC-2025-0047: Out-of-bounds access in get_disjoint_mut (0.4.10 -> 0.4.11)
slab = { git = "https://github.com/tokio-rs/slab", tag = "v0.4.11" }
