[workspace]
resolver = "2"

members = [
    "tinycloud-auth",
    "tinycloud-node-server",
    "tinycloud-sdk-wasm",
    "tinycloud-sdk-rs",
    "tinycloud-core",
    "dependencies/siwe",
    "dependencies/siwe-recap",
    "dependencies/cacao"
]

default-members = ["tinycloud-node-server"]

exclude = [
    "test/load/signer",
    "test/m1-realdata-e2e",
    "test/w5-policy-runtime-node-e2e",
]

[workspace.dependencies]
# Common dependencies with unified versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64"] }
thiserror = "2.0"
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting"] }
iri-string = { version = "0.7", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
http = "1.3"
hex = "0.4"
futures = { version = "0.3", features = ["alloc", "std"] }
pin-project = "1"
async-trait = "0.1"
ipld-core = { version = "0.4", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
ucan-capabilities-object = { git = "https://github.com/tinycloudlabs/ucan-capabilities-object" }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype", "hooks", "backup"] }
sqlparser = { version = "0.44", features = ["serde"] }
tracing = "0.1"

# Internal crate dependencies
tinycloud-auth = { path = "tinycloud-auth", version = "1.0.0" }
tinycloud-core = { path = "tinycloud-core", version = "1.0.0" }
tinycloud-sdk-rs = { path = "tinycloud-sdk-rs", version = "1.0.0" }
siwe = { path = "dependencies/siwe", version = "1.0.0" }
siwe-recap = { path = "dependencies/siwe-recap", version = "1.0.0" }
cacaos = { path = "dependencies/cacao", version = "1.0.0" }

# Security patches for transitive dependencies
[patch.crates-io]
# Fix RUSTSEC-2025-0047: Out-of-bounds access in get_disjoint_mut (0.4.10 -> 0.4.11)
slab = { git = "https://github.com/tokio-rs/slab", tag = "v0.4.11" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
auto-includes = true
# Whether to install an updater program
install-updater = false
# A GitHub repo to push Homebrew formulas to
# NOTE: on the first tagged release cargo-dist will OVERWRITE Formula/tinycloud-node.rb
# in the tap with a generated binary formula (no head/service/test blocks) — accepted:
# the CLI (`tinycloud node service ...`) is the primary service path, brew-services
# fallback is best-effort.
tap = "TinyCloudLabs/homebrew-tap"
# Customize the Homebrew formula name
formula = "tinycloud-node"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
