[package]
name = "tinycloud-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tinycloud-client"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }

# Error handling
anyhow = "1.0"
thiserror.workspace = true

# Workspace dependencies
tinycloud-lib.workspace = true
tinycloud-sdk-rs.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid = { version = "1.0", features = ["v4"] }
time.workspace = true
hex = "0.4"
base64.workspace = true
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.0"
