[package]
name = "tinycloud-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sqlite", "postgres", "mysql", "tokio"]

sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]

tokio = ["sea-orm/runtime-tokio-rustls"]
async-std = ["sea-orm/runtime-async-std-rustls"]

[dependencies]
dashmap = "5.5"
sea-orm = { version = "0.11", default-features = false, features = ["macros", "with-time", "with-json", "sqlx", "sea-orm-internal", "sqlx-dep"] }
sea-orm-migration = { version = "0.11", default-features = false }
futures.workspace = true
pin-project.workspace = true
time.workspace = true
tinycloud-lib = { version = "0.2", path = "../tinycloud-lib" }
libp2p = { version = "0.52.1", default-features = false, features = ["ed25519"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_ipld_dagcbor = "0.3"

[dev-dependencies]
sea-orm = { version = "0.11", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
async-std = { version = "1", features = ["attributes"] }
tokio.workspace = true
