[package]
name = "tinycloud-core"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sqlite", "postgres", "mysql", "tokio"]

sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
duckdb = ["dep:arrow", "dep:duckdb"]
compute = []

tokio = ["sea-orm/runtime-tokio-rustls"]
async-std = ["sea-orm/runtime-async-std-rustls"]

[dependencies]
dashmap = "5.5"
async-trait.workspace = true
sea-orm = { version = "1.1", default-features = false, features = ["macros", "with-time", "with-json"] }
sea-orm-migration = { version = "1.1", default-features = false }
futures.workspace = true
pin-project.workspace = true
time.workspace = true
tinycloud-auth = { version = "1.0", path = "../tinycloud-auth" }
libp2p = { version = "0.52.1", default-features = false, features = ["ed25519"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_ipld_dagcbor = "0.3"
ucan-capabilities-object.workspace = true
multihash-derive = "0.9"
rusqlite.workspace = true
sqlparser.workspace = true
tracing.workspace = true
tokio.workspace = true
duckdb = { version = "1.1", features = ["bundled", "appender-arrow"], optional = true }
arrow = { version = "56", features = ["ipc"], optional = true }
tempfile = "3"
aes-gcm = "0.10"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hex.workspace = true
base64.workspace = true
sha2 = "0.10"
# W1 (audit P1): full Unicode NFC normalization for policy capability path
# canonicalization. Replaces the hand-coded subset that only composed a
# narrow Latin precomposed-pair table.
unicode-normalization = "0.1"

[dev-dependencies]
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
async-std = { version = "1", features = ["attributes"] }
tokio.workspace = true
iri-string.workspace = true

# P1 (compute-service-implementation-plan.md): the `RoutineKeyDeriver` trait
# unit test only makes sense with `compute` enabled. `required-features`
# makes a plain `cargo test` skip this target instead of silently reporting
# zero tests, and errors if it's explicitly requested without the feature
# (the C5 failure mode the plan bans).
[[test]]
name = "routine_key_deriver"
path = "tests/routine_key_deriver.rs"
required-features = ["compute"]
