[package]
name = "tinycloud-lib"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
iri-string.workspace = true
ipld-core.workspace = true
multihash-codetable = { version = "0.1", features = ["blake2b", "blake3"] }
serde_ipld_dagcbor.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
base64.workspace = true
time.workspace = true
cacaos.workspace = true
siwe-recap.workspace = true
lazy_static = "1.4"
ssi = { git = "https://github.com/chunningham/ssi", rev = "137e3b1", features = ["ethereum"] }
ucan-capabilities-object.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio.workspace = true
