[package]
name = "tinycloud-node"
version = "1.5.0"
authors = ["TinyCloud Protocol"]
edition = "2021"
description = "TinyCloud Protocol Node"
repository = "https://github.com/TinyCloudLabs/tinycloud-node"
license-file = "../LICENSE.md"

[lib]
name = "tinycloud"
path = "src/lib.rs"

[[bin]]
name = "tinycloud"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
aws-sdk-s3 = "0.19"
aws-types = "0.49"
aws-smithy-http = "0.49"
axum = "0.7"
base64 = "0.13"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive"] }
futures = { default-features = false, version = "0.3", features = ["alloc", "std", "executor"] }
hex.workspace = true
hmac = "0.12"
hyper = "0.14"
lazy_static = "1.4.0"
libc = "0.2"
multer = { version = "3.1.0", features = ["tokio-io"] }
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace"] }
percent-encoding = "2.3"
pin-project = "1"
prometheus = { version = "0.13.0", features = ["process"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7"
rocket = { version = "0.5.1", features = ["json", "tls", "mtls"] }
scrypt = "0.11"
subtle = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64", "hex"] }
sha2 = "0.10"
toml = "0.8"
thiserror = "2.0"
time.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "signal", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
# Release builds cross-compile aarch64 Linux from x86_64 Linux. Vendoring
# OpenSSL avoids needing target OpenSSL headers/libs in the runner image.
native-tls = { version = "0.2.14", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
core-foundation-sys = "0.8.6"
security-framework = { version = "2.11.1", features = ["OSX_10_15"] }
security-framework-sys = { version = "2.11.1", features = ["OSX_10_15"] }

[dependencies.tinycloud-core]
path = "../tinycloud-core/"
default-features = false
features = ["sqlite", "postgres", "mysql", "tokio"]

[dependencies.tinycloud-auth]
path = "../tinycloud-auth/"

[dev-dependencies]
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

[features]
default = []
dstack = []
duckdb = ["tinycloud-core/duckdb"]

# cargo-binstall support: allows `cargo binstall tinycloud-node`
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# cargo-dist metadata
[package.metadata.dist]
dist = true
