[package]
name = "tinycloud-sdk-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
tinycloud-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
hex.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest = { version = "0.11", features = ["json"] }
time.workspace = true
http.workspace = true
base64.workspace = true
iri-string.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros"]}
