[package]
name = "tinycloud-sdk-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.24", features = ["wasmbind"] }
siwe = { version = "1.0.0", path = "../siwe", features = ["serde"] }
siwe-recap = { version = "0.2.0", path = "../siwe-recap"}
tinycloud-lib = { version = "0.2", path = "../tinycloud-lib" }
tinycloud-sdk-rs = { version = "0.2", path = "../tinycloud-sdk-rs" }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.5.0"
thiserror.workspace = true
hex.workspace = true
lazy_static = "1.4.0"
k256 = { version = "0.13.1", features = ["ecdsa-core", "ecdsa", "std"]}
web-sys = { version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console"
] }
uuid = { version = "1.3.4", features = ["v4", "js"] }
libipld.workspace = true
getrandom = { version = "0.2", features = ["js"] }
