[package]
name = "tinycloud-verifier-wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
thiserror.workspace = true
time.workspace = true
tinycloud-auth = { version = "1.0.0", path = "../tinycloud-auth" }
wasm-bindgen = "0.2.100"

[dev-dependencies]
hex.workspace = true
serde_ipld_dagcbor.workspace = true
