[package]
name = "m1-realdata-e2e"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
ed25519-dalek = "2"
policy-core = { path = "vendor/policy-engine", package = "policy-core" }
policy-engine-http = { path = "vendor/policy-engine/crates/policy-engine-http", package = "policy-engine-http" }
policy-evidence-vc = { path = "vendor/policy-engine/crates/policy-evidence-vc", package = "policy-evidence-vc" }
policy-runtime = { path = "vendor/policy-engine/crates/policy-runtime", package = "policy-runtime", default-features = false, features = ["vc-evidence"] }
rocket = { version = "0.5.1", features = ["json", "tls", "mtls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
time = { version = "0.3", features = ["parsing", "formatting"] }
tinycloud-auth = { path = "../../tinycloud-auth" }
tinycloud-core = { path = "../../tinycloud-core" }
tinycloud-node = { path = "../../tinycloud-node-server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
