[package]
name = "tinycloud-node-production-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[features]
mounted-fixture = ["tinycloud-node/mounted-fixture"]

[dependencies]
anyhow = "1"
base64 = "0.22"
futures = "0.3"
k256 = "0.13"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tinycloud-auth = { path = "../../tinycloud-auth" }
tinycloud-core = { path = "../../tinycloud-core", default-features = false, features = ["sqlite", "tokio"] }
tinycloud-node = { package = "tinycloud-node", path = "../../tinycloud-node-server" }
