[package]
name = "w5-policy-runtime-node-e2e"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
ed25519-dalek = "2"
policy-core = { git = "https://github.com/TinyCloudLabs/policy-engine", branch = "main", package = "policy-core" }
policy-runtime = { git = "https://github.com/TinyCloudLabs/policy-engine", branch = "main", package = "policy-runtime", default-features = false }
rocket = { version = "0.5.1", features = ["json", "tls", "mtls"] }
serde_json = "1"
tempfile = "3"
time = { version = "0.3", features = ["parsing", "formatting"] }
tinycloud-auth = { path = "../../tinycloud-auth" }
tinycloud-core = { path = "../../tinycloud-core" }
tinycloud-node = { path = "../../tinycloud-node-server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
